Fix: Uneven section display on smaller viewports
- Add max-width to main class of AddTrial page when reaching a certain viewport

--- a/src/components/SetTrialParameters/index.css
+++ b/src/components/SetTrialParameters/index.css
@@ -4,6 +4,12 @@
     padding-bottom: 16px;
 }
 
+@media (max-width: 2100px) {
+    .set-trial-param-root {
+        padding-bottom: 0;
+    }
+}
+
 .set-trial-param-content {
     display: flex;
     flex-direction: column;
