--- a/src/pages/AddTrial/index.css
+++ b/src/pages/AddTrial/index.css
@@ -11,3 +11,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@media (max-width: 2100px) {
+    .add-trial {
+        max-width: 1320px;
+    }
+}
